--- a/lab04/contactcopy.html
+++ b/lab04/contactcopy.html
@@ -24,7 +24,7 @@
             <label for="mobiletext">mobile text</label><br>
 
             <label for="message">Message:</label><br>
-            <textarea id="message" name="message" row="3" cols="60"></textarea><br>
+            <textarea id="message" name="message" rows="3" cols="60"></textarea><br>
 
             <input type="submit" value="submit">
 
