--- a/lab04/contactcopy.html
+++ b/lab04/contactcopy.html
@@ -18,7 +18,7 @@
             <input type="text" id="name" name="Name"><br>
             
             <p>Choose contact ways</p>
-            <input type="radio" id="email" name="contactway" value="email" checked="yes">
+            <input type="radio" id="email" name="contactway" value="email">
             <label for="email">email</label><br>
             <input type="radio" id="mobiletext" name="contactway" value="mobiletext">
             <label for="mobiletext">mobile text</label><br>
