--- a/lab03/contact.html
+++ b/lab03/contact.html
@@ -6,9 +6,9 @@
     </head>
     <body>
         <h1>Contact</h1>
-        <a>Campus West <br>
+        <p>Campus West <br>
         150 Henry Street<br>
-        Syracuse, NY 13244</a><br><br>
+        Syracuse, NY 13244</p><br><br>
         <a href="mailto:wzhu01@syr.edu">Wanting Zhu Email</a><br><br>
         <a href="http://www.linkedin.com/in/zhuwanting"><img src="../images/LinkedIn.png" alt="linkedin" width="65" height="60">My LinkedIn Profile</a><br><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2270556208027!2d-76.14374358836822!3d43.03665399196833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39987314d47%3A0x37af8ddd24bfe9e4!2sHenry%20Lot%2C%20150%20Henry%20St%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1694717568236!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
