--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -12,7 +12,7 @@
         <br>
         <a href="mailto:wzhu01@syr.edu">Wanting Zhu Email</a>
         <br>
-        <a href="http://www.linkedin.com/in/zhuwanting"><img src="../images/LinkedIn.png" alt="linkedin" width="65" height="60">My LinkedIn Profile</a><br>
+        <a href="http://www.linkedin.com/in/zhuwanting"><img src="../images/logo-sized.png" alt="linkedin sized">My LinkedIn Profile</a><br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2270556208027!2d-76.14374358836822!3d43.03665399196833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39987314d47%3A0x37af8ddd24bfe9e4!2sHenry%20Lot%2C%20150%20Henry%20St%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1694717568236!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         <h2>Contact me</h2>
         <form action="https://formspree.io/f/xbjvzzlb" method="post">
