--- a/lab07/contact.html
+++ b/lab07/contact.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
         <h1>Contact</h1>
         <p>Campus West <br>
         150 Henry Street<br>
