--- a/lab07/index.html
+++ b/lab07/index.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+    <nav>
+        <a href="index.html">Home</a> |
+        <a href="skills.html">Skills</a> |
+        <a href="contact.html">Contact</a>
+    </nav>
     <img src="../images/self.png" alt="self image" width="1024">
 <h1>
     Wanting Zhu's Biography
