--- a/lab07/skills.html
+++ b/lab07/skills.html
@@ -9,6 +9,11 @@
         </style>
     </head>
     <body>
+        <nav>
+            <a href="index.html">Home</a> |
+            <a href="skills.html">Skills</a> |
+            <a href="contact.html">Contact</a>
+        </nav>
         <table>
             <caption>Skills</caption>
             <tr>
