--- a/lab10/contact.html
+++ b/lab10/contact.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a>
         </nav>
         <h1>Contact</h1>
@@ -45,7 +45,7 @@
                     <input type="submit" value="submit">
                 </form>
             </div>
-                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2270556208027!2d-76.14374358836822!3d43.03665399196833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39987314d47%3A0x37af8ddd24bfe9e4!2sHenry%20Lot%2C%20150%20Henry%20St%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1694717568236!5m2!1sen!2sus" width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
+                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.2270556208027!2d-76.14374358836822!3d43.03665399196833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39987314d47%3A0x37af8ddd24bfe9e4!2sHenry%20Lot%2C%20150%20Henry%20St%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1694717568236!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
         </div>
 
     </body>
