--- a/lab10/index.html
+++ b/lab10/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="skills.html">Skills</a> |
+        <a href="index.html">Home</a> <span>|</span>
+        <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
     <header><img class="self" src="../images/self.png" alt="self image" width="1024"></header>
