--- a/lab10/skills.html
+++ b/lab10/skills.html
@@ -10,9 +10,9 @@
         </style>-->
     </head>
     <body class="skillsbody">
-        <nav class="skillnav">
-            <a href="index.html">Home</a> |
-            <a href="skills.html">Skills</a> |
+        <nav>
+            <a href="index.html">Home</a> <span>|</span>
+            <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a>
         </nav>
         <h1 class="headskill">Technical Skills</h1>
