--- a/project5/guidebook.html
+++ b/project5/guidebook.html
@@ -94,7 +94,7 @@
                 <h2>Roles</h2>
                 <p>In Yueju opera, roles are categorized into six main types: Xiaosheng (young males), Xiaodan (young females), Laosheng (older males), Laodan (older females), Xiaochou (comedic roles), and Damian (typically villains with painted faces). Since the 1940s reforms, these role distinctions have become more flexible. For instance, Xiaodan can range from tragic females to martial females, while Xiaosheng might be scholars or martial males.</p>
                 <h2>Costumes</h2>
-                <p>Yue Opera's costumes primarily feature silks and satins for their soft texture. The designs emphasize plain, block colors, exuding elegance, with the occasional use of an embroidered robe called mangpao. This refined style is complemented by natural makeup, giving actors a gentle appearance.</h2>
+                <p>Yue Opera's costumes primarily feature silks and satins for their soft texture. The designs emphasize plain, block colors, exuding elegance, with the occasional use of an embroidered robe called mangpao. This refined style is complemented by natural makeup, giving actors a gentle appearance.</p>
                 <h2>Facial Design</h2>
                 <p>Yue Opera makeup blends traditional and film techniques, primarily using oil-based products for a soft, bright look. Female roles feature unique headpieces inspired by ancient paintings, and unlike other opera genres, it avoids face-painting for a more lifelike appearance.</p>
                 <h2>Famous stories</h2>
@@ -168,8 +168,7 @@
                 <label for="email">email:</label>
                 <input type="text" id="email" name="Email"><br>
                 <label for="favorite">select type</label><br>
-                <select id="operatype" name="operatype">
-                    <option></option>
+                <select id="favorite" name="favorite">
                     <option value="Beijing Opera">Beijing Opera</option>
                     <option value="Henan Opera">Henan Opera</option>
                     <option value="Huangmei Opera">Huangmei Opera</option>
