--- a/project5/index.html
+++ b/project5/index.html
@@ -91,8 +91,7 @@
                 <label for="email">email:</label>
                 <input type="text" id="email" name="Email"><br>
                 <label for="favorite">select type</label><br>
-                <select id="operatype" name="operatype">
-                    <option></option>
+                <select id="favorite" name="favorite">
                     <option value="Beijing Opera">Beijing Opera</option>
                     <option value="Henan Opera">Henan Opera</option>
                     <option value="Huangmei Opera">Huangmei Opera</option>
