--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -11,6 +11,7 @@
     </head>
     <body class="skillsbody">
         <nav>
+            <a href="#main"tabindex="1" class="skip">Skip to Content</a><br>
             <a href="index.html">Home</a> <span>|</span>
             <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a>
