--- a/lab11/index.html
+++ b/lab11/index.html
@@ -9,11 +9,12 @@
 
 <body>
     <nav>
+        <a href="#main"tabindex="1" class="skip">Skip to Content</a><br>
         <a href="index.html">Home</a> <span>|</span>
         <a href="skills.html">Skills</a> <span>|</span>
         <a href="contact.html">Contact</a>
     </nav>
-    <header><img class="self" src="../images/self.png" alt="self image" width="1024"></header>
+    <header><img class="self" src="../images/self.png" alt="girl in red dress set between the snow view" width="1024"></header>
         <h1>
             Wanting Zhu's Biography
         </h1>
