--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -76,23 +76,23 @@
         <div class="flexskill">
             <div class="coreskill">
                 <div>
-                    <img src="../images/ps.png" alt="self image" width="50"><br>
+                    <img src="../images/ps.png" alt="logo for Adobe Photoshop" width="50"><br>
                     <p>Adobe Photoshop</p>
                 </div>
                 <div>
-                    <img src="../images/ai.png" alt="self image" width="50"><br>
+                    <img src="../images/ai.png" alt="logo for Adobe Illustrator" width="50"><br>
                     <p>Adobe Illustrator</p>
                 </div>
                 <div>
-                    <img src="../images/python.png" alt="self image" width="50"><br>
+                    <img src="../images/python.png" alt="logo for Python" width="50"><br>
                     <p>Python</p>
                 </div>
                 <div>
-                    <img src="../images/sql.png" alt="self image" width="50"><br>
+                    <img src="../images/sql.png" alt="logo for Microsoft SQL" width="50"><br>
                     <p>Microsoft SQL</p>
                 </div>
                 <div>
-                    <img src="../images/excel.png" alt="self image" width="50"><br>
+                    <img src="../images/excel.png" alt="logo for Microsoft Excel" width="50"><br>
                     <p>Microsoft Excel</p>
                 </div>
             </div>
