--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -24,7 +24,7 @@
             <div class="links">
                 <a href="mailto:wzhu01@syr.edu" class="contact-email">Wanting Zhu Email</a>
                 <br>
-                <a href="http://www.linkedin.com/in/zhuwanting"><img src="../images/logo-sized.png" alt="linkedin sized" width="20">My LinkedIn Profile</a>
+                <a href="http://www.linkedin.com/in/zhuwanting"><img src="../images/logo-sized.png" alt="Logo for linkedin" width="20">My LinkedIn Profile</a>
             </div>
         </div>
 
