--- a/lab11/contact.html
+++ b/lab11/contact.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <nav>
-            <a href="#main"tabindex="1" class="skip">Skip to Content</a><br>
+            <a href="#main" class="skip">Skip to Content</a><br>
             <a href="index.html">Home</a> <span>|</span>
             <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a>
         </nav>
-        <h1>Contact</h1>
+        <h1 id="main">Contact</h1>
         <div class="contact1">
             <div class="address"> 
                 <h2>Address</h2>
