--- a/lab11/index.html
+++ b/lab11/index.html
@@ -22,7 +22,7 @@
             Personal info
         </h2>
     <main>
-        <p>
+        <p id="main">
             My name is Wanting Zhu. I’m an <strong>adverting</strong> major and a <strong>data analytics</strong> minor interested in marketing research. I love cycling and travelling. I have accomplished two triathlon competition in high school.  
         </p>
         <p>
