--- a/lab11/skills.html
+++ b/lab11/skills.html
@@ -11,12 +11,12 @@
     </head>
     <body class="skillsbody">
         <nav>
-            <a href="#headskill" class="skip">Skip to Content</a><br>
+            <a href="#main" class="skip">Skip to Content</a><br>
             <a href="index.html">Home</a> <span>|</span>
             <a href="skills.html">Skills</a> <span>|</span>
             <a href="contact.html">Contact</a>
         </nav>
-        <h1 class="headskill">Technical Skills</h1>
+        <h1 class="headskill" id="main">Technical Skills</h1>
         <p class="intro">I am planning to focus my career on market research. So I've learned both advertising skills and coding skills that would help me to be success in the future. Below are my core skills.</p>
         <!--<table>
             <caption>Skills</caption>
