--- a/project6/performers.html
+++ b/project6/performers.html
@@ -173,9 +173,9 @@
         <img src="../images-p/sitelogo.png" alt="site logo">
         <hr>
         <a href="mailto:wzhu01@syr.edu" class="contact-email">Wanting Zhu Email</a><br>
-        <img src="./img/2.png" alt="ins icon">
-        <img src="./img/1.png" alt="facebook icon">
-        <img src="./img/3.png" alt="twitter icon">
+        <img src="../images-p/ins.png" alt="ins icon">
+        <img src="../images-p/facebook.png" alt="facebook icon">
+        <img src="../images-p/twitter.png" alt="twitter icon">
       </div>
       <div class="navbot">
         <ul>
