--- a/project6/performers.html
+++ b/project6/performers.html
@@ -14,159 +14,159 @@
           <img src="../images-p/sitelogo.png" alt="site logo">
         </li>
       </ul>
-      <ul class="meau">
+        <ul class="meau">
         <li><a href="index.html">Home</a></li>
         <li><a href="guidebook.html">Beginner's Guidebook</a></li>
         <li><a href="performers.html">Famous Performers</a></li>
-      </ul>
+        </ul>
     </nav>
     <main>
-      <h1>Famous Chinese Opera Performers</h1>
-      <p><a href="index.html">Home</a> > <a href="performers.html">Famous Performers</a></p>
-      <section>
+        <h1>Famous Chinese Opera Performers</h1>
+        <p><a href="index.html">Home</a> > <a href="performers.html">Famous Performers</a></p>
+        <section>
         <div id="mei">
-          <div>
+            <div>
             <iframe id="video"
-              src="https://www.youtube.com/embed/HtYCNq8SgwA?si=OHHv3231H3gFmkD6&amp;start=6" title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-          <div id="text1">
+                src="https://www.youtube.com/embed/HtYCNq8SgwA?si=OHHv3231H3gFmkD6&amp;start=6" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+            <div id="text1">
             <h2>MEI LANFANG 梅兰芳 - Peking Opera</h2>
             <p>Mei Lanfang, born in 1894, was known for his female roles and was dubbed the "Queen of Peking
-              Opera." He began his training at 8 and debuted at 11. He influenced Western artists like Charlie
-              Chaplin and Bertold Brecht. During Japan's occupation of Beijing in 1937, Mei refused to
-              perform, leading to his impoverishment. Post-1949, he held significant positions in Chinese
-              opera institutions.</p>
+                Opera." He began his training at 8 and debuted at 11. He influenced Western artists like Charlie
+                Chaplin and Bertold Brecht. During Japan's occupation of Beijing in 1937, Mei refused to
+                perform, leading to his impoverishment. Post-1949, he held significant positions in Chinese
+                opera institutions.</p>
             <h3>Famous Repertoire</h3>
             <p>The Peony Pavilion (Du liniang)</p>
             <p>Legend of the White Snake (Bai Suzhen)</p>
-          </div>
+            </div>
         </div>
         <div id="mei">
-          <div id="text1">
+            <div id="text1">
             <h2>CHENG YANQIU 程砚秋 - Peking Opera</h2>
             <p>Cheng Yan Qiu started Peking Opera training at six, mastering various roles under different
-              mentors. He debuted at 11 and gained acclaim a year later with performances like General's Son
-              to Be Executed. B He joined Rong's troupe with a seven-year contract, learning roles like huadan
-              and qingyi. Under Luo Ying Gong, he expanded his skills to literature, calligraphy, and other
-              arts, enhancing his Peking Opera understanding. His unique singing and movements led to the
-              creation of the Cheng School of Peking Opera.</p>
+                mentors. He debuted at 11 and gained acclaim a year later with performances like General's Son
+                to Be Executed. B He joined Rong's troupe with a seven-year contract, learning roles like huadan
+                and qingyi. Under Luo Ying Gong, he expanded his skills to literature, calligraphy, and other
+                arts, enhancing his Peking Opera understanding. His unique singing and movements led to the
+                creation of the Cheng School of Peking Opera.</p>
             <h3>Famous Repertoire</h3>
             <p>Blue Frost Sword</p>
             <p>Lady Mei</p>
-          </div>
-          <div>
+            </div>
+            <div>
             <iframe id="video"
-              src="https://www.youtube.com/embed/NiOSj2RZqd4?si=FmCKYBCJvZNYEPOl&amp;start=379"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
+                src="https://www.youtube.com/embed/NiOSj2RZqd4?si=FmCKYBCJvZNYEPOl&amp;start=379"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
         </div>
         <div id="mei">
-          <div>
+            <div>
             <iframe id="video" src="https://www.youtube.com/embed/TgR0rx9GyRU?si=eqWEq-e4oeqHmHOp"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-          <div id="text1">
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+            <div id="text1">
             <h2>MA LIANLIANG 马连良 - Peking Opera</h2>
             <p>Ma Lianliang was specializing in the Lao Sheng or old male characters. Starting his training at
-              eight and performing by 10, he eventually led his own opera troupe. Drawing from the Tan
-              School's techniques and incorporating other masters' elements, he founded the Ma School, which
-              gained prominence from the 1920s to the 1960s. Ma's performances were known for their elegance
-              and classicism. Recognized twice as a top performer, he also innovated Peking Opera in various
-              aspects.</p>
+                eight and performing by 10, he eventually led his own opera troupe. Drawing from the Tan
+                School's techniques and incorporating other masters' elements, he founded the Ma School, which
+                gained prominence from the 1920s to the 1960s. Ma's performances were known for their elegance
+                and classicism. Recognized twice as a top performer, he also innovated Peking Opera in various
+                aspects.</p>
             <h3>Famous Repertoire</h3>
             <p>Borrowing Easterly Winds</p>
             <p>Orphan of the Zhao Clan</p>
-          </div>
+            </div>
         </div>
         <div id="mei">
-          <div id="text1">
+            <div id="text1">
             <h2>CHANG XIANGYU 常香玉 - Henan Opera</h2>
             <p>Chang Xiangyu was a renowned Chinese opera actress. Trained by her father in Yu opera to prevent
-              her from becoming a child bride, she gained fame at thirteen after performing "Romance of the
-              Western Chamber," earning her the title "Queen of Yuju Opera." In 1944, she married Chang
-              Xianzhang, who later helped in her career and co-founded the Xiang Yu Opera Troupe.</p>
+                her from becoming a child bride, she gained fame at thirteen after performing "Romance of the
+                Western Chamber," earning her the title "Queen of Yuju Opera." In 1944, she married Chang
+                Xianzhang, who later helped in her career and co-founded the Xiang Yu Opera Troupe.</p>
             <h3>Famous Repertoire</h3>
             <p>Hua Mulan</p>
-          </div>
-          <div>
+            </div>
+            <div>
             <iframe id="video"
-             src="https://www.youtube.com/embed/zcubHiOn1so?si=RbZdvUnw4j4cMaER"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
+            src="https://www.youtube.com/embed/zcubHiOn1so?si=RbZdvUnw4j4cMaER"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
         </div>
         <div id="mei">
-          <div>
+            <div>
             <iframe 
             id="video"
             src="https://www.youtube.com/embed/gathvk943nI?si=JX2Uep9rXH9MTWWr"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-          <div id="text1">
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+            <div id="text1">
             <h2>YAN FENGYING 严凤英 - Huangmei Opera</h2>
             <p>Yan Fengying was known for her female roles and is remembered as the "queen of Huangmei opera."
-              During the Cultural Revolution, she faced severe persecution, being falsely accused of
-              "counterrevolutionary activities." Tortured and humiliated, she took her own life in 1968. After
-              her suicide attempt, she was denied immediate medical treatment due to bureaucratic procedures
-              and faced further indignities even in her unconscious state. Her husband, Wang Guanya, who also
-              faced torture, wrote a biography about her in 1981 and later adapted her story into various
-              media forms. Despite facing criticism for not protecting Yan enough, Wang remained devoted to
-              her memory, never remarrying and dedicating his life to preserving Yan's legacy.</p>
+                During the Cultural Revolution, she faced severe persecution, being falsely accused of
+                "counterrevolutionary activities." Tortured and humiliated, she took her own life in 1968. After
+                her suicide attempt, she was denied immediate medical treatment due to bureaucratic procedures
+                and faced further indignities even in her unconscious state. Her husband, Wang Guanya, who also
+                faced torture, wrote a biography about her in 1981 and later adapted her story into various
+                media forms. Despite facing criticism for not protecting Yan enough, Wang remained devoted to
+                her memory, never remarrying and dedicating his life to preserving Yan's legacy.</p>
             <h3>Famous Repertoire</h3>
             <p>Tian Xian Pei - Seventh Fairy</p>
-          </div>
+            </div>
         </div>
         <div id="mei">
-          <div id="text1">
+            <div id="text1">
             <h2>YUAN XUEFEN 袁雪芬 - Yue Opera</h2>
             <p>Yuan Xuefen, born in 1922, is considered one of the most significant actresses in Yueju opera's
-              recent history. She is best known for her role in the 1946 production of "Sister Xianglin,"
-              adapted from Lu Xun's work. Before adapting it, she sought permission from Lu Xun's family. Yuan
-              played a pivotal role in reforming Yue opera's staging in the 1940s, introducing innovative
-              lighting, scenery, and softer costuming.</p>
+                recent history. She is best known for her role in the 1946 production of "Sister Xianglin,"
+                adapted from Lu Xun's work. Before adapting it, she sought permission from Lu Xun's family. Yuan
+                played a pivotal role in reforming Yue opera's staging in the 1940s, introducing innovative
+                lighting, scenery, and softer costuming.</p>
             <h3>Famous Repertoire</h3>
             <p>Sister Xianglin</p>
-          </div>
-          <div>
+            </div>
+            <div>
             <iframe 
             id="video"
-             src="https://www.youtube.com/embed/50wqS2j2MuA?si=wb94BXq7ejEUzuHv"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
+            src="https://www.youtube.com/embed/50wqS2j2MuA?si=wb94BXq7ejEUzuHv"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
         </div>
         <div id="mei">
-          <div>
+            <div>
             <iframe id="video"
-             src="https://www.youtube.com/embed/32oOe0azbIw?si=xWfwQ5252uFovoiB"
-              title="YouTube video player" frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-          <div id="text1">
+            src="https://www.youtube.com/embed/32oOe0azbIw?si=xWfwQ5252uFovoiB"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+            <div id="text1">
             <h2>LOONG KOON-TIN 龙贯天 - Cantonese Opera</h2>
             <p>Loong Koon-tin, originally Se-To Yok, is a Cantonese opera artist who trained under several
-              masters and founded multiple opera troupes. He has composed plays, recorded songs, and acted in
-              stage shows and TV dramas. Since 2012, he's been the Artistic Director of the Yau Ma Tei Theatre
-              Venue Partnership Scheme. Recognized for his contributions, he received awards including the
-              2013 Secretary for Home Affairs' Commendation and the 2016 Medal of Honour from the HKSAR
-              government.</p>
+                masters and founded multiple opera troupes. He has composed plays, recorded songs, and acted in
+                stage shows and TV dramas. Since 2012, he's been the Artistic Director of the Yau Ma Tei Theatre
+                Venue Partnership Scheme. Recognized for his contributions, he received awards including the
+                2013 Secretary for Home Affairs' Commendation and the 2016 Medal of Honour from the HKSAR
+                government.</p>
             <h3>Famous Repertoire</h3>
             <p>The Injustice Done to Dou'e</p>
-          </div>
+            </div>
         </div>
-      </section>
+        </section>
     </main>
     <footer>
       <div>
@@ -175,7 +175,7 @@
         <a href="mailto:wzhu01@syr.edu" class="contact-email">Wanting Zhu Email</a><br>
         <img src="../images-p/ins.png" alt="ins icon">
         <img src="../images-p/facebook.png" alt="facebook icon">
-        <img src="../images-p/twitter.png" alt="twitter icon">
+        <img src="../images-p/" alt="twitter icon">
       </div>
       <div class="navbot">
         <ul>
