--- a/project7/guidebook.html
+++ b/project7/guidebook.html
@@ -6,6 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Beginner's Guidebook</title>
   <link rel="stylesheet" href="../css/guidebook.css">
+  <script>
+    // hide / show
+    let flage = false
+    let meau = document.getElementById('boxbox')
+
+    function block() {
+      flage = !flage
+      if (flage) {
+        meau.style.display = 'block'
+      } else {
+        meau.style.display = 'none'
+      }
+    }
+
+  //  scroll
+    function fun1() {
+      var a_href = location.href.split('?a=')[1]
+      if (Boolean(a_href)) {
+        document.getElementById('to1').click
+      } else {
+        return false
+      }
+    }
+    function fun2() {
+      var a_href = location.href.split('?a=')[1]
+      if (Boolean(a_href)) {
+        document.getElementById('to2').click
+      } else {
+        return false
+      }
+    }
+    function fun3() {
+      var a_href = location.href.split('?a=')[1]
+      if (Boolean(a_href)) {
+        document.getElementById('to3').click
+      } else {
+        return false
+      }
+    }
+    function fun4() {
+      var a_href = location.href.split('?a=')[1]
+      if (Boolean(a_href)) {
+        document.getElementById('to4').click
+      } else {
+        return false
+      }
+    }
+    function fun5() {
+      var a_href = location.href.split('?a=')[1]
+      if (Boolean(a_href)) {
+        document.getElementById('to5').click
+      } else {
+        return false
+      }
+    }
+
+  </script>
 </head>
 
 <body>
@@ -35,7 +92,7 @@
     </div>
     <div class="right">
       <p><a href="index.html">Home</a> > <a href="guidebook.html">Beginner's Guidebook</a></p>
-      <a name="beijing"></a>
+      <a class="beijing"></a>
       <div id="beijing">
         <div>
           <img src="../images-p/Peking-opera-3.jpg" alt="peking opera">
@@ -82,7 +139,7 @@
           <p><a href="http://theatrebeijing.com/whats_on/chinese_opera/">Beijing - Liyuan Theater</a></p>
         </div>
       </div>
-      <a name="henan"></a>
+      <a class="henan"></a>
       <div id="henan">
         <div>
           <h1>Henan Opera (Yuju Opera)</h1>
@@ -124,7 +181,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-      <a name="huangmei"></a>
+      <a class="huangmei"></a>
       <div id="huangmei">
         <div>
           <img src="../images-p/Huangmei-Opera.jpg" alt="huangmei opera">
@@ -164,7 +221,7 @@
               Anhui - Anhui Huangmei Opera Theatrer</a></p>
         </div>
       </div>
-      <a name="yue"></a>
+      <a class="yue"></a>
       <div id="yue">
         <div>
           <h1>Yue Opera</h1>
@@ -213,7 +270,7 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
-      <a name="cantonese"></a>
+      <a class="cantonese"></a>
       <div id="cantonese">
         <div>
           <img src="../images-p/Cantonese-Opera.jpg" alt="cantonese opera">
@@ -283,7 +340,7 @@
     </div>
     <div id="ios_right">
       <p><a href="index.html">Home</a> > <a href="guidebook.html">Beginner's Guidebook</a></p>
-      <a name="beijing1"></a>
+      <a class="beijing1"></a>
       <div id="beijing">
         <div>
           <img src="../images-p/Peking-opera-3.jpg" alt="peking opera">
@@ -332,7 +389,7 @@
           <p><a href="http://theatrebeijing.com/whats_on/chinese_opera/">Beijing - Liyuan Theater</a></p>
         </div>
       </div>
-      <a name="henan1"></a>
+      <a class="henan1"></a>
       <div id="henan">
         <div>
           <h1>Henan Opera (Yuju Opera)</h1>
@@ -377,7 +434,7 @@
 
         </div>
       </div>
-      <a name="huangmei1"></a>
+      <a class="huangmei1"></a>
       <div id="huangmei">
         <div>
           <img src="../images-p/Huangmei-Opera.jpg" alt="huangmei opera">
@@ -419,7 +476,7 @@
               Anhui - Anhui Huangmei Opera Theatrer</a></p>
         </div>
       </div>
-      <a name="yue1"></a>
+      <a class="yue1"></a>
       <div id="yue">
         <div>
           <h1>Yue Opera</h1>
@@ -470,7 +527,7 @@
 
         </div>
       </div>
-      <a name="cantonese1"></a>
+      <a class="cantonese1"></a>
       <div id="cantonese">
         <div>
           <img src="../images-p/Cantonese-Opera.jpg" alt="cantonese opera">
@@ -579,63 +636,6 @@
       </form>
     </div>
   </footer>
-  <script>
-    // hide / show
-    let flage = false
-    let meau = document.getElementById('boxbox')
-
-    function block() {
-      flage = !flage
-      if (flage) {
-        meau.style.display = 'block'
-      } else {
-        meau.style.display = 'none'
-      }
-    }
-
-  //  scroll
-    function fun1() {
-      var a_href = location.href.split('?a=')[1]
-      if (Boolean(a_href)) {
-        document.getElementById('to1').click
-      } else {
-        return false
-      }
-    }
-    function fun2() {
-      var a_href = location.href.split('?a=')[1]
-      if (Boolean(a_href)) {
-        document.getElementById('to2').click
-      } else {
-        return false
-      }
-    }
-    function fun3() {
-      var a_href = location.href.split('?a=')[1]
-      if (Boolean(a_href)) {
-        document.getElementById('to3').click
-      } else {
-        return false
-      }
-    }
-    function fun4() {
-      var a_href = location.href.split('?a=')[1]
-      if (Boolean(a_href)) {
-        document.getElementById('to4').click
-      } else {
-        return false
-      }
-    }
-    function fun5() {
-      var a_href = location.href.split('?a=')[1]
-      if (Boolean(a_href)) {
-        document.getElementById('to5').click
-      } else {
-        return false
-      }
-    }
-
-  </script>
 </body>
 
 
